# yolo-infer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  yolo_example.cpp
lib/spdlog/fmt/bundled/: ostream.h
src/: CMakeLists.txt  yolo_infer.cpp  yolo_infer.hpp
src/common/: common.hpp  yi_type.hpp
src/core/: CMakeLists.txt  allocator.cpp  allocator.hpp  database.cpp  database.hpp  stream.cpp  stream.hpp
src/cv/: CMakeLists.txt  affine.cu  affine.h  decode.cu  decode.h
src/nn/: CMakeLists.txt
src/nn/backend/: engine.hpp
src/nn/backend/tensorrt/: engine_trt.cpp  engine_trt.hpp
src/nn/postprocess/: postprocess.cpp  postprocess.hpp
src/nn/preprocess/: preprocess.cpp  preprocess.hpp
src/tasks/: CMakeLists.txt  yolo_task.hpp
src/tasks/detect/: detect.cpp  detect.hpp
src/tasks/obb/: obb.cpp  obb.hpp
src/tasks/pose/: pose.cpp  pose.hpp
src/tasks/segment/: segment.cpp  segment.hpp
test/: CMakeLists.txt  testforward.cpp  testimage.cpp  testwarp.cpp
